Fix alignment fo carrot in drop down button

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -83,8 +83,8 @@
 }
 
 .fas.fa-caret-down {
-    position: relative;
-    top: 4px;
+    display: flex;
+    align-items: center;
 }
 
 .menu-user-name {
@@ -135,7 +135,6 @@
 
 .menu-link {
     height: 30px;
-
 }
 
 .sprites {
@@ -151,7 +150,7 @@
     border-radius: 3px;
 }
 
-.session-links .fas {
+.fas {
     width: 24px;
     height: 24px;
     padding: 6px;
